# naratta

./: Makefile  README.md  docker-compose.yml  pyproject.toml
narrata/api/: novels.py  voices.py
server/: Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
server/app/: config.py  server.py
server/app/db/: engine.py
server/app/routes/: api_router.py  files.py  novels.py  routes.py  voices.py
server/app/services/epub/: consolidator.py  epub.py  extractor.py
server/migrations/: env.py
server/migrations/versions/: 87884589a8a0_init.py
